# remotesom

./: .gitmodules  CHANGELOG.md  README.md  cabal.project  remotesom.cabal
.github/workflows/: build.yml
Numeric/: RemoteSOM.hs
Numeric/RemoteSOM/: IO.hs  RunN.hs
app/: Main.hs  Network.hs  Opts.hs  StorableArray.hs
