cabal-version:   3.0
name:            remotesom
version:         0.1.0.0
synopsis:        Self-organizing maps with federated learning
license:         Apache-2.0
license-file:    LICENSE
author:          Mirek Kratochvil
maintainer:      exa.exa@gmail.com
copyright:       Copyright (C) 2025 University of Luxembourg
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- description:
-- extra-source-files:

common opts
  ghc-options: -Wall -O2 -fexpose-all-unfoldings -fspecialize-aggressively

library
  import:           opts
  hs-source-dirs:   .
  exposed-modules:
    Numeric.RemoteSOM
    Numeric.RemoteSOM.IO

  -- other-modules:

  build-depends:
    , accelerate
    , aeson
    , base
    , storablevector

  hs-source-dirs:   .
  default-language: Haskell2010

executable remotesom
  import:           opts
  ghc-options:      -rtsopts -threaded
  main-is:          Main.hs
  other-modules:    Opts
  autogen-modules:  Paths_remotesom
  other-modules:    Paths_remotesom
  build-depends:
    , accelerate
    , accelerate-llvm-native
    , aeson
    , base
    , optparse-applicative
    , remotesom
    , tls

  hs-source-dirs:   app
  default-language: Haskell2010
