cabal-version:   3.0
name:            remotesom
version:         0.2.0.0
synopsis:        Self-organizing maps with federated learning
license:         Apache-2.0
license-file:    LICENSE
author:          Mirek Kratochvil
maintainer:      exa.exa@gmail.com
copyright:       Copyright (C) 2025 University of Luxembourg
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- description:
-- extra-source-files:

common opts
  ghc-options: -Wall -O2 -fexpose-all-unfoldings -fspecialize-aggressively

library
  import:           opts
  hs-source-dirs:   .
  exposed-modules:
    Numeric.RemoteSOM
    Numeric.RemoteSOM.IO
    Numeric.RemoteSOM.RunN

  -- other-modules:

  build-depends:
    , accelerate
    , accelerate-llvm-native
    , accelerate-io
    , aeson
    , base
    , mmap
    , storablevector

  hs-source-dirs:   .
  default-language: Haskell2010

executable remotesom
  import:           opts
  ghc-options:      -rtsopts -threaded
  main-is:          Main.hs
  other-modules:
    Network
    Opts

  autogen-modules:  Paths_remotesom
  other-modules:    Paths_remotesom
  build-depends:
    , accelerate >= 1.3
    , aeson
    , async
    , base
    , bytestring
    , crypton-x509
    , crypton-x509-validation
    , crypton-x509-store
    , crypton-x509-system
    , network
    , network-run
    , optparse-applicative
    , random >= 1.3
    , remotesom
    , tls

  hs-source-dirs:   app
  default-language: Haskell2010
